--- a/about/index.html
+++ b/about/index.html
@@ -169,7 +169,7 @@
 
 
 
-    <a data-url="https://crvdgc.github.io/about/index.html" data-id="cjuxf83gk0001f0lnm6x0xasu" class="article-share-link"><i class="fa fa-share"></i>分享到</a>
+    <a data-url="https://crvdgc.github.io/about/index.html" data-id="cjuxg362o0001wwlnu9rqfsoo" class="article-share-link"><i class="fa fa-share"></i>分享到</a>
 <script>
     (function ($) {
         $('body').on('click', function() {
@@ -486,8 +486,8 @@
     
         <script type="text/x-mathjax-config">
             MathJax.Hub.Config({ tex2jax: {
-                inlineMath: [['$','$'], ['\\(','\\)']],
-                displayMath: [ ['$$','$$'], ["\\[","\\]"] ]
+                inlineMath: [ ['$','$'], ['\\(','\\)'] ],
+                displayMath: [ ['$$','$$'], ['\\[","\\]'] ]
             } });
         </script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML"></script>
